--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "react-dom": "^19.0.0",
     "react-scripts": "^3.0.1",
     "react-slick": "^0.30.2",
-    "homepage": "https://github.com/punkoc/sitekaluniaprojeto",
+    "homepage": "https://github.com/punkoc/sitekaluniaprojeto.git",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^4.2.4"
   },
