corrigindo homepage para netlify

--- a/package.json
+++ b/package.json
@@ -52,5 +52,5 @@
   "bugs": {
     "url": "https://github.com/punkoc/sitekaluniaprojeto/issues"
   },
-  "homepage": "https://github.com/punkoc/sitekaluniaprojeto.git"
+  "homepage": "https://coletivokalunia.netlify.app/"
 }
